working javafx11