@@ -1,21 +1,9 @@
-plugins {
-    id 'org.openjfx.javafxplugin' version '0.0.7'
-    id "org.jetbrains.gradle.plugin.idea-ext" version "0.5"
-}
-
-apply plugin: 'idea'
-
 group = 'org.dockfx'
 description = 'DockFX'
 
 //test {
 //    jvmArgs '--add-modules', 'java.xml.bind'
 //}
-
-def exports = ["--add-exports", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-               "--add-exports", "javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED",
-               "--add-exports", "javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED"
-]
 
 /*idea.project.settings {
     compiler {
@@ -26,16 +14,3 @@ def exports = ["--add-exports", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAME
         }
     }
 }*/
-
-javafx {
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs = exports
-    options.compilerArgs << "-Xlint:none" << "-nowarn"
-
-    options.fork = true
-    options.forkOptions.executable = "javac"
-}
-
