@@ -1,51 +1,10 @@
 plugins {
-    id 'com.intershop.gradle.jaxb' version '2.0.0'
 }
 description = 'lint'
-
-jaxb {
-    javaGen {
-        lint {
-            schema = file('src/main/xsd/lint-issues.xsd')
-            packageName = "edu.kit.iti.formal.psdbg.lint"
-            //binding = file('binding.xjb')
-            //args << "--add-modules java.xml.bind"
-        }
-    }
-}
-compileJava.dependsOn jaxbJavaGenLint
-/*
-sourceSets {
-    main{
-        java{
-            srcDir "$buildDir/xjc/generated-sources"
-            srcDir "src/main/java"
-        }
-    }
-}*/
-
-print(sourceSets.main.java.srcDirs)
-
-/*plugins {
-    id 'org.unbroken-dome.xjc' version '1.1.3'
-}
-
-xjcGenerate {
-    source = fileTree('src/main/xsd') { include '*.xsd' }
-    targetPackage = "edu.kit.iti.formal.psdbg.lint"
-    //bindingFiles = fileTree('src/main/jaxb') { include '*.xjb' }
-    //catalogs = fileTree('src/main/catalog') { include '*.cat' }
-}
-compileJava.dependsOn xjcGenerate
-*/
 dependencies {
     compile group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.9.5'
     compile group: 'it.unibo.alice.tuprolog', name: 'tuprolog', version: '3.2.1'
     compile project(':lang')
     compile project(':rt')
-    /*  xjcClasspath 'com.sun.xml.bind:jaxb-xjc:2.2.7-b41'
-      xjcClasspath 'com.sun.xml.bind:jaxb-impl:2.2.7-b41'
-      xjcClasspath 'javax.xml.bind:jaxb-api:2.2.7'
-      xjcClasspath 'org.jvnet.jaxb2_commons:jaxb2-basics:0.11.1'
-  */
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 }
